GNOME Bugzilla – Bug 669398
totem build failure: TotemPlParser-1.0.gir: error: too few type arguments (GHashTable)
Last modified: 2012-02-20 10:17:27 UTC
I am building totem git master via JHBuild on Fedora 16. totem-pl-parser git master too. The totem build fails with the following. I hope totem-pl-parser is the right product to file bug against. There is another bug regarding totem compilation, against vala - Bug 667751 may be of interest. /opt/gnome/bin/valac --girdir=../../../src --pkg Totem-1.0 --pkg libpeas-1.0 --pkg GtkClutter-1.0 --pkg clutter-1.0 --pkg cogl-pango-1.0 --pkg gtk+-3.0 -C totem-rotation-plugin.vala totem-rotation-plugin.vala:74.29-74.48: warning: Clutter.Group.get_n_children has been deprecated since 1.10 totem-rotation-plugin.vala:75.35-75.53: warning: Clutter.Group.get_nth_child has been deprecated since 1.10 TotemPlParser-1.0.gir:26.57-26.57: error: too few type arguments <type name="GLib.HashTable" c:type="GHashTable"/> ^ Compilation failed: 1 error(s), 2 warning(s)
Created attachment 206822 [details] [review] introspection: Skip TotemPlParserMetadata because it’s evil Bastien, how does this look? This should fix the problem, but it's a pain to test, so I'm looking for a second opinion rather than taking the time to test it. This is also so that I can shift the blame onto you when the patch doesn't work.
Comment on attachment 206822 [details] [review] introspection: Skip TotemPlParserMetadata because it’s evil I don't know whether there's a better way to do this, but the commit message was hilarious. We should rely on hilarious commit messages more.